1.09/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-srv
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3000
