1.09/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingpong-srv-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        backend:
          serviceName: pingpong-srv
          servicePort: 2346
      - path: /
        backend:
          serviceName: string-generator-server-srv
          servicePort: 2345
